objects/Global_Variable__c.object
<CustomObject>
    <description>These object will capture all global settings that are time dependent</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TPO_Represent_Name__c</fullName>
        <label>TPO Represent Name</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variable_Type__c</fullName>
        <defaultValue>&apos;TPO France&apos;</defaultValue>
        <label>Variable Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variable_Value__c</fullName>
        <label>Variable Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Global Variable</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Variable_Type__c</columns>
        <columns>Variable_Value__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Variables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>